Add animated upper picture with spinning effect and adjust layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1 class = "title">Neex's Page</h1>
     
 <!-- Contenedor principal de la página -->
-
+  <div class = "upper-picture">
+    <img src="assets/miku-disk.png" alt="sonic cars is real", class = "upper-picture">
+  </div>
   <div class = "backgroundbox" style = "color: white; margin-bottom: 10px;">
       <div class="scroll-left">
       <p>Work in progress  |  Check out the latest updates!  |  I'm bored lmao</p>
